objects/Scheduled_Record_Update__c.object
<CustomObject>
    <description>Custome Object to manage process builder schedules</description>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <inlineHelpText>Default is 200. Lower this if you run into CPU Timeout issues or Record-locking issues.</inlineHelpText>
        <label>Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRON_Expression__c</fullName>
        <inlineHelpText>Generate CRON here: https://www.freeformatter.com/cron-expression-generator-quartz.html</inlineHelpText>
        <label>CRON Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <inlineHelpText>Leave this blank, it will auto-populate when the job is scheduled.</inlineHelpText>
        <label>JobId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Query__c</fullName>
        <inlineHelpText>Must include the name of the field to be modified (the &quot;Write To Field&quot;)</inlineHelpText>
        <label>SOQL Query</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Write_Text__c</fullName>
        <inlineHelpText>Write text that will trigger a process in Process Builder</inlineHelpText>
        <label>Write Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_To_Field__c</fullName>
        <label>Write To Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Scheduled Record Update</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRON_Expression__c</columns>
        <columns>Write_Text__c</columns>
        <columns>Write_To_Field__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Batch_Size__c</columns>
        <columns>SOQL_Query__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scheduled Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Record Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>